<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android = "http://schemas.android.com/apk/res/android"
    xmlns:tools = "http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height = "match_parent" android:paddingLeft= "@dimen/activity_horizontal_margin"
    android:paddingRight = "@dimen/activity_horizontal_margin"
    android:paddingTop = "@dimen/activity_vertical_margin"
    android:paddingBottom = "@dimen/activity_vertical_margin" tools:context = ".main.MainActivity">

    <TextView
        android:text = "@string/login_text"
        android:layout_width="wrap_content"
        android:layout_height = "wrap_content"
        android:id = "@+id/tv_login"
        android:textSize = "35dp"
        android:layout_alignParentTop = "true"
        android:layout_centerHorizontal = "true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/iv_login"
        android:src="@drawable/ic_home_foreground"
        android:layout_below="@+id/tv_login"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:id = "@+id/et_email"
        android:hint = "email"
        android:focusable = "true"
        android:textColorHighlight = "#000000"
        android:textColorHint = "#ffff25e6"
        android:layout_marginTop = "166dp"
        android:layout_below = "@+id/iv_login"
        android:layout_alignParentLeft = "true"
        android:layout_alignParentStart = "true"
        android:layout_alignParentRight = "true"
        android:layout_alignParentEnd = "true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/et_password"
        android:layout_below="@+id/et_email"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/et_email"
        android:layout_alignEnd="@+id/et_email"
        android:textColorHint="#ffff299f"
        android:hint="Password" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="login"
        android:id="@+id/btn_login"
        android:layout_below="@+id/et_password"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_centerHorizontal="true"
        android:visibility="gone" />

</RelativeLayout>